--- a/Watchlist/app/src/main/res/values/strings.xml
+++ b/Watchlist/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Watchlist</string>
+
+    <string name="search_hint">Search...</string>
+    <string name="fab_add">FAB Add</string>
 </resources>
